...
      <Space type="base" />
      <View style={styles.validateButton}>
        <Button
          onPress={onButtonPress}
          isDisabled={!oneChoiceSelected || isValidating}
          isLoading={isValidating}
          testID="button-validate"
        >
          {translations.validate}
        </Button>
      </View>
    </KeyboardAwareScrollView>
  );
...
