...
      slideId,
    };
    return navigate('Modals', {screen: 'Correction', params: correctionParams});
  }, [navigate, slideId, validateAnswer_]);

  return (
    <Screen testID="question-screen" onRef={scrollViewRef}>
      <StatusBar barStyle="dark-content" backgroundColor={HEADER_BACKGROUND_COLOR} />
      <Question
        type={type}
        choices={choices}
        header={header}
        explanation={explanation}
...
