...
    } = this.props;
    const lives = hasConsumedExtraLife && _lives !== undefined ? _lives + 1 : _lives;
    const canGoNext = lives === undefined || lives > 0;

    let analyticsID;
    if (canGoNext) {
      analyticsID = 'button-next-question';
    } else if (offeringExtraLife) {
      analyticsID = 'button-refuse-extralife';
    } else {
      analyticsID = 'button-game-over';
    }

...
