...
import {HEADER_BACKGROUND_COLOR} from '../navigator/navigation-options';
import {getHeaderHeight} from '../modules/status-bar';
import HeaderBackIcon from '../components/header-back-icon';
import Touchable from '../components/touchable';
import theme, {getHitSlop} from '../modules/theme';
import HeaderSlideTitle from './header-slide-title';
import HeaderSlideRight from './header-slide-right';
import Progression from './progression';
import {useBackHandler} from './with-backhandler';

const styles = StyleSheet.create({
  container: {
    height: getHeaderHeight(),
...
